--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               <span>0</span>
             </li>
           </ul>
-          <button>Try Again</button>
+          <button class="reload-button" onclick="reloadPage()">Try Again</button>
         </div>
         <div id="overlay" class="overlay"></div>
         <div id="warningPopup" class="popup">
